# HFSI

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  config.py  database_schema.sql  main.py  pyproject.toml  requirements.txt
backend/models/: __init__.py  schemas.py
backend/services/: agent.py  document_processor.py  neo4j_store.py  summarization.py  supabase_service.py
backend/tests/: test_api.py
backend/utils/: __init__.py  helpers.py
frontend/: .env.example  README.md  STORAGE_SETUP.md  migration.sql  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/analysis/[id]/: page.tsx
frontend/app/analyze/: page.tsx
frontend/app/api/analyses/: route.ts
frontend/app/api/analyses/[id]/: route.ts
frontend/app/api/analyze/: route.ts
frontend/app/api/analyze-single/: route.ts
frontend/app/api/analyze-stored/: route.ts
frontend/app/api/detect/: route.ts
frontend/app/api/transcribe/: route.ts
frontend/app/api/upload/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/transcribe/: page.tsx
frontend/components/: ConfidenceMatrix.tsx  CriticalAlerts.tsx  Dashboard.tsx  DocumentInput.tsx  EvidenceTimeline.tsx  InconsistencyFinder.tsx  Loader.tsx  PrecedentCases.tsx  RiskScore.tsx
frontend/lib/: analysisStorage.ts  supabase-server.ts
frontend/prisma/: schema.prisma
frontend/types/: index.ts
